--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 <body>
 <span id="scroll" data-0="top:0%;" data-end="top:95%;"></span>
 
+<img src="images/kiri.png" data-start="top:0%;left:20%;" data-2000="top:100%;left:80%;">
+
 <div id="progress" data-0="width:0%;background:hsl(200, 100%, 50%);"
      data-end="width:100%;background:hsl(920, 100%, 50%);"></div>
-<div data-start="top:5px;left100px;" data-500="top:50px;left150px;" data-end="top:100px; left:300px;">test</div>
+<!--<div data-start="top:5px;left:100px;" data-500="top:50px;left:150px;" data-end="top:100px; left:300px;">test</div>-->
 
 <!-- skrollr -->
 <script type="text/javascript" src="javascripts/skrollr.min.js"></script>
