--- a/index.html
+++ b/index.html
@@ -1,22 +1,16 @@
-<html>
+<html lang="ja">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta charset="UTF-8">
     <title></title>
     <script type="text/javascript" src="javascripts/jquery-2.1.4.min.js"></script>
-    <script type="text/javascript" src="javascripts/curogosho.js"></script>
     <link rel="stylesheet" href="stylesheets/curogosho.css">
 </head>
 <body>
-<span id="scroll" data-0="top:0%;" data-end="top:95%;"></span>
-
-<img src="images/kiri.png" data-start="top:0%;left:20%;" data-2000="top:100%;left:80%;">
-
-<div id="progress" data-0="width:0%;background:hsl(200, 100%, 50%);"
-     data-end="width:100%;background:hsl(920, 100%, 50%);"></div>
-<!--<div data-start="top:5px;left:100px;" data-500="top:50px;left:150px;" data-end="top:100px; left:300px;">test</div>-->
-
-<!-- skrollr -->
+<div id="container">
+    <div id="debug"></div>
+    <div id="haku"></div>
+</div>
 <script type="text/javascript" src="javascripts/skrollr.min.js"></script>
-<script type="text/javascript">skrollr.init();</script>
+<script type="text/javascript" src="javascripts/curogosho.js"></script>
 </body>
 </html>
