--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-    <script type="text/javascript" src="javascripts/jquery-2.1.4.min.js"></script>
-    <link rel="stylesheet" href="stylesheets/curogosho.css">
-</head>
-<body>
-<div id="container">
-    <div id="debug"></div>
-    <div id="haku"></div>
-</div>
-<script type="text/javascript" src="javascripts/skrollr.min.js"></script>
-<script type="text/javascript" src="javascripts/curogosho.js"></script>
-</body>
+<html lang='ja'>
+  <head>
+    <meta charset='UTF-8'>
+      <title></title>
+      <script src='javascripts/jquery-2.1.4.min.js' type='text/javascript'></script>
+      <link href='stylesheets/curogosho.css' rel='stylesheet'>
+    </meta>
+  </head>
+  <body>
+    <div id='container'>
+      <div id='debug'></div>
+      <div id='haku'></div>
+    </div>
+    <script src='javascripts/skrollr.min.js' type='text/javascript'></script>
+    <script src='javascripts/curogosho.js' type='text/javascript'></script>
+  </body>
 </html>
