remove type/javascript

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html lang='ja'>
   <head>
     <meta charset='UTF-8'>
-      <title></title>
-      <script src='javascripts/jquery-2.1.4.min.js' type='text/javascript'></script>
+      <title>curogosho</title>
       <link href='stylesheets/curogosho.css' rel='stylesheet'>
+      <script src='javascripts/jquery-2.1.4.min.js'></script>
     </meta>
   </head>
   <body>
@@ -11,7 +11,7 @@
       <div id='debug'></div>
       <div id='haku'></div>
     </div>
-    <script src='javascripts/skrollr.min.js' type='text/javascript'></script>
-    <script src='javascripts/curogosho.js' type='text/javascript'></script>
+    <script src='javascripts/skrollr.min.js'></script>
+    <script src='javascripts/curogosho.js'></script>
   </body>
 </html>
